--- a/src/ContosoTraders.Ui.Website/package.json
+++ b/src/ContosoTraders.Ui.Website/package.json
@@ -22,8 +22,9 @@
     "@mui/styles": "^5.11.2",
     "axios": "^0.21.4",
     "date-fns": "^2.0.0-beta.5",
-    "dotenv": "^8.6.0",
+    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
+    "fs": "0.0.1-security",
     "history": "^4.9.0",
     "i18next": "^15.0.6",
     "izitoast": "^1.4.0",
@@ -31,8 +32,11 @@
     "msal": "^1.4.10",
     "mui-file-dropzone": "^4.0.2",
     "office-ui-fabric-react": "^7.170.0",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "prop-types": "^15.8.1",
     "qs": "^6.10.1",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-a11y-dialog": "^4.2.0",
     "react-dom": "^18.2.0",
@@ -42,7 +46,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-s-alert": "^1.4.1",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.2",
     "recompose": "^0.30.0",
     "redux": "^4.1.0",
@@ -52,7 +56,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts --max_old_space_size=8000 start",
+    "start": "GENERATE_SOURCEMAP=false react-scripts --max_old_space_size=8000 start",
     "build": "react-scripts --max_old_space_size=8000 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
