--- a/src/ContosoTraders.Ui.Website/package.json
+++ b/src/ContosoTraders.Ui.Website/package.json
@@ -14,12 +14,12 @@
     "@babel/helper-compilation-targets": "^7.13.16",
     "@babel/helper-regex": "^7.10.5",
     "@fluentui/react": "^7.170.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@microsoft/applicationinsights-react-js": "^2.5.4",
     "@microsoft/applicationinsights-web": "^2.6.2",
-    "@mui/lab": "^5.0.0-alpha.117",
-    "@mui/material": "^5.11.6",
-    "@mui/styles": "^5.11.2",
-    "axios": "^0.21.4",
+    "axios": "^0.18.1",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.6.0",
     "formik": "^2.2.9",
@@ -31,9 +31,9 @@
     "office-ui-fabric-react": "^7.170.0",
     "prop-types": "^15.8.1",
     "qs": "^6.10.1",
-    "react": "^18.2.0",
+    "react": "^16.14.0",
     "react-a11y-dialog": "^4.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^16.14.0",
     "react-i18next": "^9.0.10",
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^6.0.0",
@@ -50,8 +50,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts --max_old_space_size=8000 start",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts --max_old_space_size=8000 build",
+    "start": "react-scripts --max_old_space_size=8000 start",
+    "build": "react-scripts --max_old_space_size=8000 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
