enable rg creation

--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -48,22 +48,22 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v3
-      # - name: azure login
-      #   uses: azure/login@v1
-      #   with:
-      #     creds: ${{ secrets.SERVICEPRINCIPAL }}
-      # # The first step is to create the resource group: `contoso-traders-rg`.
-      # # The below step can also be manually executed as follows:
-      # # az deployment sub create --location {LOCATION} --template-file .\createResourceGroup.bicep
-      # # Note: You can specify any location for `{LOCATION}`. It's the region where the deployment metadata will be stored, and not
-      # # where the resource groups will be deployed.
-      # - name: create resource group
-      #   uses: Azure/arm-deploy@v1
-      #   with:
-      #     scope: subscription
-      #     region: ${{ env.SUB_DEPLOYMENT_REGION }}
-      #     template: ./iac/createResourceGroup.bicep
-      #     parameters: env=${{ vars.ENVIRONMENT }}
+      - name: azure login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.SERVICEPRINCIPAL }}
+      # The first step is to create the resource group: `contoso-traders-rg`.
+      # The below step can also be manually executed as follows:
+      # az deployment sub create --location {LOCATION} --template-file .\createResourceGroup.bicep
+      # Note: You can specify any location for `{LOCATION}`. It's the region where the deployment metadata will be stored, and not
+      # where the resource groups will be deployed.
+      - name: create resource group
+        uses: Azure/arm-deploy@v1
+        with:
+          scope: subscription
+          region: ${{ env.SUB_DEPLOYMENT_REGION }}
+          template: ./iac/createResourceGroup.bicep
+          parameters: env=${{ vars.ENVIRONMENT }}
       # # Next step is to deploy the Azure resources to the resource group `contoso-traders-rg` created above. The deployed resources
       # # include storage accounts, function apps, app services cosmos db, and service bus etc.
       # # The below step can also be manually executed as follows:
